# ofdb-seed

./: .gitignore  Cargo.toml  README.md
examples/login/: Cargo.toml  index.html
examples/login/src/: lib.rs
examples/search/: index.html
examples/search/src/: lib.rs
src/: api.rs  lib.rs
src/components/: login.rs  mod.rs  search.rs  search_result_item.rs
