[package]
name = "ofdb-seed"
description = "A seed library for building OpenFairDB based web applications"
version = "0.2.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/kartevonmorgen/ofdb-seed"
repository = "https://github.com/kartevonmorgen/ofdb-seed"
edition = "2018"

[dependencies]
ofdb-boundary = { version = "0.9.5", default-features = false }
percent-encoding = "2"
seed = "0.8"
web-sys = "0.3"

[badges]
maintenance = { status = "actively-developed" }
