[package]
name = "ofdb-seed"
description = "A seed library for building OpenFairDB based web applications"
version = "0.3.0"
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/kartevonmorgen/ofdb-seed"
repository = "https://github.com/kartevonmorgen/ofdb-seed"
edition = "2021"

[dependencies]
ofdb-boundary = { version = "0.10.1", default-features = false }
percent-encoding = "2.1.0"
seed = "0.9.2"
web-sys = "0.3.58"

[badges]
maintenance = { status = "actively-developed" }
